--- a/MyProject/web/WEB-INF/web.xml
+++ b/MyProject/web/WEB-INF/web.xml
@@ -20,6 +20,10 @@
         <servlet-name>LogoutController</servlet-name>
         <servlet-class>controller.auth.LogoutController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AttendStatusController</servlet-name>
+        <servlet-class>controller.lecturer.AttendStatusController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -39,6 +43,10 @@
     <servlet-mapping>
         <servlet-name>LogoutController</servlet-name>
         <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AttendStatusController</servlet-name>
+        <url-pattern>/lecturer/status</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
