--- a/MyProject/web/WEB-INF/web.xml
+++ b/MyProject/web/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     </servlet>
     <servlet>
         <servlet-name>LecturerTimetableController</servlet-name>
-        <servlet-class>controller.lecturer.TimetableController</servlet-class>
+        <servlet-class>controller.TimetableController</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>HomeController</servlet-name>
@@ -23,6 +23,10 @@
     <servlet>
         <servlet-name>AttendStatusController</servlet-name>
         <servlet-class>controller.lecturer.AttendStatusController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TimetableController</servlet-name>
+        <servlet-class>controller.student.TimetableController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>AttendStatusController</servlet-name>
         <url-pattern>/lecturer/status</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TimetableController</servlet-name>
+        <url-pattern>/student/timetable</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
