--- a/MyProject/web/WEB-INF/web.xml
+++ b/MyProject/web/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     </servlet>
     <servlet>
         <servlet-name>LecturerTimetableController</servlet-name>
-        <servlet-class>controller.TimetableController</servlet-class>
+        <servlet-class>controller.lecturer.LecturerTimetableController</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>HomeController</servlet-name>
@@ -25,8 +25,8 @@
         <servlet-class>controller.lecturer.AttendStatusController</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>TimetableController</servlet-name>
-        <servlet-class>controller.student.TimetableController</servlet-class>
+        <servlet-name>StudentTimetableController</servlet-name>
+        <servlet-class>controller.student.StudentTimetableController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
@@ -53,7 +53,7 @@
         <url-pattern>/lecturer/status</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>TimetableController</servlet-name>
+        <servlet-name>StudentTimetableController</servlet-name>
         <url-pattern>/student/timetable</url-pattern>
     </servlet-mapping>
     <session-config>
